chore: update things to match the repository's new name (#76)
Fix: FSADT2-469

--- a/.github/workflows/pr-close.yml
+++ b/.github/workflows/pr-close.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  NAME: nrbestapi
+  NAME: nr-spar-oracle-api
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
