--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -174,8 +174,8 @@ jobs:
           newman run test/postman/starting-api.postman_collection.json -e test/postman/starting-api.postman_environment.json \
             --env-var "apiAddr=nr-spar-backend-${{ github.event.number }}-spar-api.apps.silver.devops.gov.bc.ca" \
             --env-var "releaseVer=snapshot-${{ github.event.number }}" \
-            --env-var "authServer=${{ secrets.KEYCLOAK_SERVER_REALM }}" \
-            --env-var "authClient=${{ secrets.KC_SERVICE_ACCOUNT_NAME }}" \
+            --env-var "authServer=${{ vars.KEYCLOAK_SERVER_REALM }}" \
+            --env-var "authClient=${{ vars.KC_SERVICE_ACCOUNT_NAME }}" \
             --env-var "authClient=${{ secrets.KC_SERVICE_ACCOUNT_PASS }}" \
             --suppress-exit-code -r htmlextra --reporter-htmlextra-export testArtifacts/api-tests-report.html
 
